# Amberhaart

./: .gitignore  README.md
Draw Template/: CMakeLists.txt  DrawingCMakelists.txt
Project-Practice/IMDb/: pom.xml
week-01/day-02/AnimalsAndLegs/: main.cpp
week-01/day-02/AverageOfImput/: CMakeLists.txt  main.cpp
week-01/day-02/Bmi/: main.cpp
week-01/day-02/CodingHours/: main.cpp
week-01/day-02/Cuboid/: main.cpp
week-01/day-02/DefiniteBasicInfo/: CMakeLists.txt  main.cpp
week-01/day-02/FavoriteNumber/: main.cpp
week-01/day-02/HelloMe/: main.cpp
week-01/day-02/HelloOthers/: main.cpp
week-01/day-02/HelloUser/: main.cpp
week-01/day-02/HumptyDumpty/: main.cpp
week-01/day-02/IntroduceYourself/: main.cpp
week-01/day-02/MileToKmConverter/: main.cpp
week-01/day-02/OddEven/: main.cpp
week-01/day-02/OneTwoALot/: main.cpp
week-01/day-02/PartyIndicator/: main.cpp
week-01/day-02/PrintBigger/: main.cpp
week-01/day-02/SecondsInADay/: main.cpp
week-01/day-02/Swap/: main.cpp
week-02/day-01/AppendA/: main.cpp
week-03/day-03/diagonals/: CMakeLists.txt
week-06/gardenApp/: CMakeLists.txt  flower.cpp  flower.h  garden.cpp  garden.h  main.cpp  plant.h  tree.cpp  tree.h
week-06/guess_my_number/: CMakeLists.txt  main.cpp
week-06/student-counter/: main.cpp
week-06/testingstuff/: CMakeLists.txt  main.cpp
week-09/Greetings/: project.js
week-09/HelloWorld/: package-lock.json
week-09/Todos/: app.js  package-lock.json  package.json
week-09/day-01/: app.js  index.html
week-10/day-04/: .env  main.html  package-lock.json  package.json  server.js
(+308 files in other folders)
